refactor: simplify stream collection in memory repositories
style(deckView): add test IDs to buttons and fix description display

perf: replace stream collect with toList method

fix(security): improve CSRF configuration and logout handling

refactor(user): add roles handling to User model and entity

feat(data): add dev profile for DataInitializer and improve demo data setup

style(homeView): restrict access to USER role and add test IDs

refactor(statsService): convert DailyStats to record and use records in stats dialog

ci: add integration test tag for integration tests

refactor(homePresenter): delegate deck filtering to DeckQueryService

refactor(deckPresenter): delegate flashcard filtering to CardQueryService

test: update DeckPresenterTest to use CardQueryService mock

build: enable dependency locking and add integrationTest task

fix(userUseCase): get current user from security context

fix(authController): replace manual logout with redirect, use POST /logout

refactor(authFacade): delegate JPA registration, add password policy validations

style(languageSwitcher): use constants from LocaleConstants

refactor(application): unify locale cookie/session keys usage

style(mainLayout): add test IDs and admin/audit buttons conditionally

docs: update README with security, dependency locking, and localization info